--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -574,5 +574,6 @@
   "page_not_found_hint": "Even with blockchain some spaces are still uncovered. Like this one here!",
   "danger_zone": "Danger Zone",
   "reset_wallet": "Reset Wallet",
-  "reset_wallet_hint": "Resetting the wallet removes all locally stored data, accounts and settings from the wallet. You can re-import all your accounts using the respective recovery phrase. Your Signa and tokens are securely stored on the blockchain and are therefore not lost as long as you are in possession of the recovery phrases."
+  "reset_wallet_hint": "Resetting the wallet removes all locally stored data, accounts and settings from the wallet. You can re-import all your accounts using the respective recovery phrase. Your Signa and tokens are securely stored on the blockchain and are therefore not lost as long as you are in possession of the recovery phrases.",
+  "welcome_to_wallet": "Welcome to Signum Phoenix Wallet"
 }
