--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -574,5 +574,6 @@
   "page_not_found_hint": "Jopa lohkoketjussa jotkut tilat jäävät vielä auki. Kuten tämä täällä!",
   "danger_zone": "Vaaravyöhyke",
   "reset_wallet": "Nollaa lompakko",
-  "reset_wallet_hint": "Lompakon nollaaminen poistaa kaikki paikallisesti tallennetut tiedot, tilit ja asetukset lompakosta. Voit tuoda kaikki tilisi uudelleen käyttämällä vastaavaa palautuslauseketta. Signasi ja tunnuksesi on tallennettu turvallisesti lohkoketjuun, joten ne eivät häviä niin kauan kuin sinulla on palautuslausekkeet."
+  "reset_wallet_hint": "Lompakon nollaaminen poistaa kaikki paikallisesti tallennetut tiedot, tilit ja asetukset lompakosta. Voit tuoda kaikki tilisi uudelleen käyttämällä vastaavaa palautuslauseketta. Signasi ja tunnuksesi on tallennettu turvallisesti lohkoketjuun, joten ne eivät häviä niin kauan kuin sinulla on palautuslausekkeet.",
+  "welcome_to_wallet": "Tervetuloa Signum Phoenix Walletiin"
 }
