--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -574,5 +574,6 @@
   "page_not_found_hint": "ブロックチェーンを使用しても、いくつかのスペースがまだ明らかにされています。ここのように！",
   "danger_zone": "危険区域",
   "reset_wallet": "ウォレットのリセット",
-  "reset_wallet_hint": "ウォレットをリセットすると、ローカルに保存されたすべてのデータ、アカウント、および設定がウォレットから削除されます。それぞれの復元フレーズを使用して、すべてのアカウントを再インポートできます。あなたのシグナとトークンはブロックチェーンに安全に保管されているため、復元フレーズを所有している限り失われることはありません。"
+  "reset_wallet_hint": "ウォレットをリセットすると、ローカルに保存されたすべてのデータ、アカウント、および設定がウォレットから削除されます。それぞれの復元フレーズを使用して、すべてのアカウントを再インポートできます。あなたのシグナとトークンはブロックチェーンに安全に保管されているため、復元フレーズを所有している限り失われることはありません。",
+  "welcome_to_wallet": "Signum Phoenix ウォレットへようこそ"
 }
