chore: improved transaction table layout

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -575,5 +575,6 @@
   "danger_zone": "Опасна зона",
   "reset_wallet": "Нулирайте портфейла",
   "reset_wallet_hint": "Нулирането на портфейла премахва всички локално съхранени данни, акаунти и настройки от портфейла. Можете да импортирате отново всичките си акаунти, като използвате съответната фраза за възстановяване. Вашите Signa и токени се съхраняват сигурно в блокчейна и следователно не се губят, докато притежавате фразите за възстановяване.",
-  "welcome_to_wallet": "Добре дошли в портфейла Signum Phoenix"
+  "welcome_to_wallet": "Добре дошли в портфейла Signum Phoenix",
+  "refresh_transactions_hint": "Презареждане/Опресняване на последните транзакции"
 }
