--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -575,5 +575,6 @@
   "danger_zone": "खतरा क्षेत्र",
   "reset_wallet": "वॉलेट रीसेट करें",
   "reset_wallet_hint": "वॉलेट को रीसेट करने से सभी स्थानीय रूप से संग्रहीत डेटा, खातों और सेटिंग्स को वॉलेट से हटा दिया जाता है। आप संबंधित पुनर्प्राप्ति वाक्यांश का उपयोग करके अपने सभी खातों को पुनः आयात कर सकते हैं। आपके सिग्ना और टोकन ब्लॉकचैन पर सुरक्षित रूप से संग्रहीत हैं और इसलिए जब तक आप पुनर्प्राप्ति वाक्यांशों के कब्जे में हैं तब तक खो नहीं जाते हैं।",
-  "welcome_to_wallet": "सिग्नम फीनिक्स वॉलेट में आपका स्वागत है"
+  "welcome_to_wallet": "सिग्नम फीनिक्स वॉलेट में आपका स्वागत है",
+  "refresh_transactions_hint": "नवीनतम लेनदेन को रीलोड/रिफ्रेश करें"
 }
