--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -575,5 +575,6 @@
   "danger_zone": "Zona de perigo",
   "reset_wallet": "Redefinir Carteira",
   "reset_wallet_hint": "Redefinir a carteira remove todos os dados, contas e configurações armazenados localmente da carteira. Você pode reimportar todas as suas contas usando a respectiva frase de recuperação. Seu Signa e tokens são armazenados com segurança no blockchain e, portanto, não são perdidos enquanto você estiver de posse das frases de recuperação.",
-  "welcome_to_wallet": "Bem-vindo à Carteira Signum Phoenix"
+  "welcome_to_wallet": "Bem-vindo à Carteira Signum Phoenix",
+  "refresh_transactions_hint": "Recarregar/atualizar últimas transações"
 }
