--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -575,5 +575,6 @@
   "danger_zone": "Зона опасности",
   "reset_wallet": "Сбросить кошелек",
   "reset_wallet_hint": "Сброс кошелька удаляет все локально сохраненные данные, учетные записи и настройки из кошелька. Вы можете повторно импортировать все свои учетные записи, используя соответствующую фразу восстановления. Ваша Signa и токены надежно хранятся в блокчейне и поэтому не теряются до тех пор, пока у вас есть фразы для восстановления.",
-  "welcome_to_wallet": "Добро пожаловать в кошелек Signum Phoenix"
+  "welcome_to_wallet": "Добро пожаловать в кошелек Signum Phoenix",
+  "refresh_transactions_hint": "Перезагрузить/обновить последние транзакции"
 }
