--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -575,5 +575,6 @@
   "danger_zone": "Nebezpečná zóna",
   "reset_wallet": "Resetovať Peňaženku",
   "reset_wallet_hint": "Resetovaním peňaženky sa z peňaženky odstránia všetky lokálne uložené dáta, účty a nastavenia. Všetky svoje účty môžete znova importovať pomocou príslušnej frázy na obnovenie. Vaše Signa a tokeny sú bezpečne uložené na blockchaine, a preto sa nestratia, pokiaľ vlastníte frázy na obnovenie.",
-  "welcome_to_wallet": "Vitajte v Peňaženke Signum Phoenix"
+  "welcome_to_wallet": "Vitajte v Peňaženke Signum Phoenix",
+  "refresh_transactions_hint": "Znovu načítať/obnoviť najnovšie transakcie"
 }
