--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -575,5 +575,6 @@
   "danger_zone": "Επικίνδυνη ζώνη",
   "reset_wallet": "Επαναφορά Πορτοφολιού",
   "reset_wallet_hint": "Η επαναφορά του πορτοφολιού αφαιρεί όλα τα τοπικά αποθηκευμένα δεδομένα, λογαριασμούς και ρυθμίσεις από το πορτοφόλι. Μπορείτε να εισαγάγετε ξανά όλους τους λογαριασμούς σας χρησιμοποιώντας την αντίστοιχη φράση ανάκτησης. Το Signa και τα διακριτικά σας αποθηκεύονται με ασφάλεια στο blockchain και επομένως δεν χάνονται όσο διαθέτετε τις φράσεις ανάκτησης.",
-  "welcome_to_wallet": "Καλώς ήρθατε στο Πορτοφόλι Signum Phoenix"
+  "welcome_to_wallet": "Καλώς ήρθατε στο Πορτοφόλι Signum Phoenix",
+  "refresh_transactions_hint": "Επαναφόρτωση/Ανανέωση των τελευταίων συναλλαγών"
 }
