--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -575,5 +575,6 @@
   "danger_zone": "Zone dangereuse",
   "reset_wallet": "Réinitialiser le portefeuille",
   "reset_wallet_hint": "La réinitialisation du portefeuille supprime toutes les données, comptes et paramètres stockés localement du portefeuille. Vous pouvez réimporter tous vos comptes à l'aide de la phrase de récupération correspondante. Vos Signa et tokens sont stockés en toute sécurité sur la blockchain et ne sont donc pas perdus tant que vous êtes en possession des phrases de récupération.",
-  "welcome_to_wallet": "Bienvenue dans le portefeuille Signum Phoenix"
+  "welcome_to_wallet": "Bienvenue dans le portefeuille Signum Phoenix",
+  "refresh_transactions_hint": "Recharger/Actualiser les dernières transactions"
 }
