--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -575,5 +575,6 @@
   "danger_zone": "危険区域",
   "reset_wallet": "ウォレットのリセット",
   "reset_wallet_hint": "ウォレットをリセットすると、ローカルに保存されたすべてのデータ、アカウント、および設定がウォレットから削除されます。それぞれの復元フレーズを使用して、すべてのアカウントを再インポートできます。あなたのシグナとトークンはブロックチェーンに安全に保管されているため、復元フレーズを所有している限り失われることはありません。",
-  "welcome_to_wallet": "Signum Phoenix ウォレットへようこそ"
+  "welcome_to_wallet": "Signum Phoenix ウォレットへようこそ",
+  "refresh_transactions_hint": "最新のトランザクションをリロード/リフレッシュ"
 }
