--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -576,5 +576,6 @@
   "reset_wallet": "Nollaa lompakko",
   "reset_wallet_hint": "Lompakon nollaaminen poistaa kaikki paikallisesti tallennetut tiedot, tilit ja asetukset lompakosta. Voit tuoda kaikki tilisi uudelleen käyttämällä vastaavaa palautuslauseketta. Signasi ja tunnuksesi on tallennettu turvallisesti lohkoketjuun, joten ne eivät häviä niin kauan kuin sinulla on palautuslausekkeet.",
   "welcome_to_wallet": "Tervetuloa Signum Phoenix Walletiin",
-  "refresh_transactions_hint": "Päivitä/päivitä viimeisimmät tapahtumat"
+  "refresh_transactions_hint": "Päivitä/päivitä viimeisimmät tapahtumat",
+  "desktop": "Työpöytä"
 }
