--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -576,5 +576,6 @@
   "reset_wallet": "ウォレットのリセット",
   "reset_wallet_hint": "ウォレットをリセットすると、ローカルに保存されたすべてのデータ、アカウント、および設定がウォレットから削除されます。それぞれの復元フレーズを使用して、すべてのアカウントを再インポートできます。あなたのシグナとトークンはブロックチェーンに安全に保管されているため、復元フレーズを所有している限り失われることはありません。",
   "welcome_to_wallet": "Signum Phoenix ウォレットへようこそ",
-  "refresh_transactions_hint": "最新のトランザクションをリロード/リフレッシュ"
+  "refresh_transactions_hint": "最新のトランザクションをリロード/リフレッシュ",
+  "desktop": "デスクトップ"
 }
