--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -576,5 +576,6 @@
   "reset_wallet": "Resetovat Peněženku",
   "reset_wallet_hint": "Resetováním peněženky se z peněženky odstraní všechna lokálně uložená data, účty a nastavení. Všechny své účty můžete znovu importovat pomocí příslušné fráze pro obnovení. Vaše Signa a tokeny jsou bezpečně uloženy na blockchainu, a proto se neztratí, dokud budete mít fráze pro obnovení.",
   "welcome_to_wallet": "Vítejte v Peněžence Signum Phoenix",
-  "refresh_transactions_hint": "Znovu načíst/obnovit nejnovější transakce"
+  "refresh_transactions_hint": "Znovu načíst/obnovit nejnovější transakce",
+  "desktop": "plocha počítače"
 }
