--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -576,5 +576,6 @@
   "reset_wallet": "Restablecer billetera",
   "reset_wallet_hint": "Restablecer la billetera elimina todos los datos, cuentas y configuraciones almacenados localmente de la billetera. Puede volver a importar todas sus cuentas utilizando la frase de recuperación respectiva. Su Signa y tokens se almacenan de forma segura en la cadena de bloques y, por lo tanto, no se pierden mientras esté en posesión de las frases de recuperación.",
   "welcome_to_wallet": "Bienvenido a la cartera Signum Phoenix",
-  "refresh_transactions_hint": "Recargar/Actualizar últimas transacciones"
+  "refresh_transactions_hint": "Recargar/Actualizar últimas transacciones",
+  "desktop": "Escritorio"
 }
