--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -576,5 +576,6 @@
   "reset_wallet": "Poništi novčanik",
   "reset_wallet_hint": "Ponovno postavljanje novčanika uklanja sve lokalno pohranjene podatke, račune i postavke iz novčanika. Možete ponovno uvesti sve svoje račune pomoću odgovarajuće fraze za oporavak. Vaša Signa i tokeni sigurno su pohranjeni na blockchainu i stoga se ne gube sve dok imate fraze za oporavak.",
   "welcome_to_wallet": "Dobro došli u Signum Phoenix novčanik",
-  "refresh_transactions_hint": "Ponovno učitaj/osvježi najnovije transakcije"
+  "refresh_transactions_hint": "Ponovno učitaj/osvježi najnovije transakcije",
+  "desktop": "Radna površina"
 }
