--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -576,5 +576,6 @@
   "reset_wallet": "Atur Ulang Dompet",
   "reset_wallet_hint": "Menyetel ulang dompet menghapus semua data, akun, dan pengaturan yang disimpan secara lokal dari dompet. Anda dapat mengimpor ulang semua akun Anda menggunakan frase pemulihan masing-masing. Signa dan token Anda disimpan dengan aman di blockchain dan karenanya tidak hilang selama Anda memiliki frase pemulihan.",
   "welcome_to_wallet": "Selamat datang di Dompet Signum Phoenix",
-  "refresh_transactions_hint": "Reload/Refresh transaksi terbaru"
+  "refresh_transactions_hint": "Reload/Refresh transaksi terbaru",
+  "desktop": "Desktop"
 }
