--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -576,5 +576,6 @@
   "reset_wallet": "Portefeuille resetten",
   "reset_wallet_hint": "Door de portemonnee opnieuw in te stellen, worden alle lokaal opgeslagen gegevens, accounts en instellingen uit de portemonnee verwijderd. U kunt al uw accounts opnieuw importeren met behulp van de respectieve herstelzin. Je Signa en tokens staan veilig opgeslagen op de blockchain en zijn dus niet verloren zolang je in het bezit bent van de herstelzinnen.",
   "welcome_to_wallet": "Welkom bij de Signum Phoenix-portemonnee",
-  "refresh_transactions_hint": "Laad/vernieuw de laatste transacties"
+  "refresh_transactions_hint": "Laad/vernieuw de laatste transacties",
+  "desktop": "Bureaublad"
 }
