--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -576,5 +576,6 @@
   "reset_wallet": "Ресетуј новчаник",
   "reset_wallet_hint": "Ресетовање новчаника уклања све локално сачуване податке, налоге и подешавања из новчаника. Можете поново да увезете све своје налоге користећи одговарајућу фразу за опоравак. Ваша Сигна и токени су безбедно ускладиштени на блокчејну и стога нису изгубљени све док имате фразе за опоравак.",
   "welcome_to_wallet": "Добродошли у Сигнум Пхоеник Валлет",
-  "refresh_transactions_hint": "Поново учитај/освежи најновије трансакције"
+  "refresh_transactions_hint": "Поново учитај/освежи најновије трансакције",
+  "desktop": "Десктоп"
 }
